--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gajarajan's Portfolio</title>
-</head>
-<body>
-    Hello this is for test
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- <meta http-equiv="refresh" content="1"> -->
+        <title>Gajarajan's Portfolio</title>
+        <link rel="stylesheet" href="style.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+        <script src="https://momentjs.com/downloads/moment.js"></script>
+    </head>
+    <body>
+        <div id="intro">
+            <img src="https://avatars.githubusercontent.com/u/31614308" alt="Gajarajan" id="profileImg">
+            <h1>Hello, I'm <span id="name"></span>.</h1>
+            <h2>I'm a <span id="position"></span>.</h2>
+            <h3>Working in <span id="company"></span></h3>
+            <h4><span id="experianceYear"></span> years and <span id="experianceMonth"></span> months of experience</h4>
+        </div>
+        <!-- <div class="container">
+            nav.nav-bar.
+        </div> -->
+        <script src="index.js"></script>
+    </body>
 </html>
