year month format updated

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h1>Hello, I'm <span id="name"></span>.</h1>
             <h2>I'm a <span id="position"></span>.</h2>
             <h3>Working in <span id="company"></span></h3>
-            <h4><span id="experianceYear"></span> years & <span id="experianceMonth"></span> months of experience</h4>
+            <h4><span id="experianceYear"></span> years <span id="experianceMonth"></span> of experience</h4>
         </div>
         <!-- <div class="container">
             nav.nav-bar.
