--- a/index.html
+++ b/index.html
@@ -18,11 +18,45 @@
             <h1>Hello, I'm <span id="name"></span>.</h1>
             <h2>I'm a <span id="position"></span>.</h2>
             <h3>Working in <span id="company"></span></h3>
-            <h4><span id="experianceYear"></span> years <span id="experianceMonth"></span> of experience</h4>
+            <h4><span id="experianceYear"></span> Years <span id="experianceMonth"></span> of experience</h4>
+            <a href="#nav" class="button">View Protfolifo</a>
         </div>
-        <!-- <div class="container">
-            nav.nav-bar.
-        </div> -->
+        <span id="nav"></span>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+            <div class="container">
+                <button id="menu" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarText">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active" onclick="toggleHeader()">
+                            <a class="nav-link" href="#nav">Home</a>
+                        </li>
+                        <li class="nav-item" onclick="toggleHeader()">
+                            <a class="nav-link" href="#">Features</a>
+                        </li>
+                        <li class="nav-item" onclick="toggleHeader()">
+                            <a class="nav-link" href="#">Pricing</a>
+                        </li>
+                    </ul>
+                    <span class="navbar-text">
+                        Navbar text with an inline element
+                    </span>
+                </div>
+            </div>
+        </nav>
+        <h1>test</h1><br><br>
+        <h1>test</h1><br><br>
+        <h1>test</h1><br><br>
+        <h1>test</h1><br><br>
+        <h1>test</h1><br><br>
+        <h1>test</h1><br><br>
+        <h1>test</h1><br><br>
+        <h1>test</h1><br><br>
+        <h1>test</h1><br><br>
+        <h1>test</h1><br><br>
+        <h1>test</h1><br><br>
+        <h1>test</h1>
         <script src="index.js"></script>
     </body>
 </html>
