--- a/index.html
+++ b/index.html
@@ -1,50 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!-- <meta http-equiv="refresh" content="1"> -->
-        <title>Gajarajan's Portfolio</title>
-        <link rel="stylesheet" href="style.css">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-        <script src="https://momentjs.com/downloads/moment.js"></script>
-    </head>
-    <body>
-        <div id="intro">
-            <img src="https://avatars.githubusercontent.com/u/31614308" alt="Gajarajan" id="profileImg">
-            <h1>Hello, I'm <span id="name"></span>.</h1>
-            <h2>I'm a <span id="position"></span>.</h2>
-            <h3>Working in <span id="company"></span></h3>
-            <h4><span id="experianceYear"></span> Years <span id="experianceMonth"></span> of experience</h4>
-            <a href="#nav" class="button">View Protfolifo</a>
-        </div>
-        <span id="nav"></span>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
-            <div class="container">
-                <button id="menu" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarText">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item active" onclick="toggleHeader()">
-                            <a class="nav-link" href="#nav">Home</a>
-                        </li>
-                        <li class="nav-item" onclick="toggleHeader()">
-                            <a class="nav-link" href="#">Features</a>
-                        </li>
-                        <li class="nav-item" onclick="toggleHeader()">
-                            <a class="nav-link" href="#">Pricing</a>
-                        </li>
-                    </ul>
-                    <span class="navbar-text">
-                        Navbar text with an inline element
-                    </span>
-                </div>
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta http-equiv="refresh" content="1"> -->
+    <title>Gajarajan's Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+        crossorigin="anonymous"></script>
+    <script src="https://momentjs.com/downloads/moment.js"></script>
+</head>
+
+<body>
+    <div id="intro">
+        <img class="profileImg bigImg" />
+        <h1>Hello, I'm <span id="name"></span>.</h1>
+        <h2>I'm a <span id="position"></span>.</h2>
+        <h3>Working in <span id="company"></span></h3>
+        <h4><span id="experianceYear"></span> Years <span id="experianceMonth"></span> of experience</h4>
+        <a href="#nav" class="button">View Protfolifo</a>
+    </div>
+    <span id="nav"></span>
+
+    <!-- side nav bar -->
+    <div id="back-drop" class="d-none" onclick="closeNav()"></div>
+    <div id="mySidenav" class="sidenav" onclick="closeNav()">
+        <a href="#">Home</a>
+        <a href="#">Services</a>
+        <a href="#">Clients</a>
+        <a href="#">Contact</a>
+    </div>
+
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+        <div class="container">
+            <span onclick="openNav()" class="icon d-md-none">&#9776;</span>
+            <div class="logo">
+                <img class="profileImg smallImg" />
+                <h3 class="name"></h3>
             </div>
-        </nav>
+            <div class="d-none d-md-block" id="header-menu">
+                <a href="#">Home</a>
+                <a href="#">Services</a>
+                <a href="#">Clients</a>
+                <a href="#">Contact</a>
+            </div>
+        </div>
+    </nav>
+
+    <!-- <div id="main">
         <h1>test</h1><br><br>
         <h1>test</h1><br><br>
         <h1>test</h1><br><br>
@@ -57,6 +69,9 @@
         <h1>test</h1><br><br>
         <h1>test</h1><br><br>
         <h1>test</h1>
-        <script src="index.js"></script>
-    </body>
+    </div> -->
+
+    <script src="index.js" defer></script>
+</body>
+
 </html>
