--- a/index.html
+++ b/index.html
@@ -32,11 +32,7 @@
 
     <!-- side nav bar -->
     <div id="back-drop" class="d-none" onclick="closeNav()"></div>
-    <div id="mySidenav" class="sidenav" onclick="closeNav()">
-        <a href="#">Home</a>
-        <a href="#">Services</a>
-        <a href="#">Clients</a>
-        <a href="#">Contact</a>
+    <div id="mySidenav" class="sidenav menu" onclick="closeNav()">
     </div>
 
 
@@ -47,29 +43,12 @@
                 <img class="profileImg smallImg" />
                 <h3 class="name"></h3>
             </div>
-            <div class="d-none d-md-block" id="header-menu">
-                <a href="#">Home</a>
-                <a href="#">Services</a>
-                <a href="#">Clients</a>
-                <a href="#">Contact</a>
+            <div class="d-none d-md-block menu" id="header-menu">
             </div>
         </div>
     </nav>
 
-    <!-- <div id="main">
-        <h1>test</h1><br><br>
-        <h1>test</h1><br><br>
-        <h1>test</h1><br><br>
-        <h1>test</h1><br><br>
-        <h1>test</h1><br><br>
-        <h1>test</h1><br><br>
-        <h1>test</h1><br><br>
-        <h1>test</h1><br><br>
-        <h1>test</h1><br><br>
-        <h1>test</h1><br><br>
-        <h1>test</h1><br><br>
-        <h1>test</h1>
-    </div> -->
+    <div id="my-journey" class="page"></div>
 
     <script src="index.js" defer></script>
 </body>
