--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <!-- <meta http-equiv="refresh" content="1"> -->
     <title>Gajarajan's Portfolio</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
         integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
         crossorigin="anonymous"></script>
@@ -26,7 +27,11 @@
         <h2>I'm a <span id="position"></span>.</h2>
         <h3>Working in <span id="company"></span></h3>
         <h4><span id="experianceYear"></span> Years <span id="experianceMonth"></span> of experience</h4>
-        <a href="#nav" class="button">View Protfolifo</a>
+        <div>
+            <a href="#my-journey" class="button">View Portfolio</a>
+            <a href="tel:+919486254292" class="button"><i class="fa fa-phone"></i></a>
+        </div>
+        <!-- <a href="#nav" class="button">View Protfolifo</a> -->
     </div>
     <span id="nav"></span>
 
@@ -48,7 +53,7 @@
         </div>
     </nav>
 
-    <div id="my-journey" class="page"></div>
+    <object data="journey.html" type="text/html" class="page" id="my-journey"></object>
 
     <script src="index.js" defer></script>
 </body>
