--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 <body>
     <div id="intro">
         <img class="profileImg bigImg" />
-        <h1>Hello, I'm <span id="name"></span>.</h1>
-        <h2>I'm a <span id="position"></span>.</h2>
-        <h3>Working in <span id="company"></span></h3>
-        <h4><span id="experianceYear"></span> Years <span id="experianceMonth"></span> of experience</h4>
+        <h1>Hello, This is <span id="name"></span></h1>
+        <h2>Working as <span id="position"></span></h2>
+        <h3>At <span id="company"></span></h3>
+        <h4>Totally <span id="experianceYear"></span> Years <span id="experianceMonth"></span> of experience</h4>
         <div>
             <a href="#my-journey" class="button">View Portfolio</a>
             <a href="tel:+919486254292" class="button"><i class="fa fa-phone"></i></a>
